About us Bug Fix

--- a/Trip/SupportingFiles/ar.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/ar.lproj/Localizable.strings
@@ -21,3 +21,20 @@
 "Extra Kilometers" = "عدد الكيلومترات الزيادة";
 "Extra Kilometer Price" = "سعر الكيلومتر الزيادة";
 "Extra Kilometers Price" = "اجمالي  التكلفة الاضافية";
+"please try again" = "حاول مرة اخري";
+"Failed" = "فشل";
+"Success" = "";
+"Error" = "خطاء";
+"Please Upload Licence Image" = "برجاء اختيار صورة الرخصة";
+"Passwords Don't Match" = "كلمة السر غير متطابقة";
+"All Fields Are Required" = "جميع الحقول مطلوبة";
+"Image Uploaded Successfully" =  "تم رفع الصورة بنجاح";
+"Please Try Again" = "حاول مرة اخري";
+"Wrong Email or Password" = "خطاء في البريد الالكتروني او كلمة المرور";
+"Enter Your Email And Password" = "ادخل البريد الالكتروني و كلمة المرور";
+"Password Changed Successfully" = "تم تغيير كلمة المرور بنجاح";
+"This Email Doesn't Exist" = "البريد الالكتروني غير صحيح";
+"Please Enter Valid Email" = "برجاء ادخال بريد صالح";
+"Invitation Will Be Sent" = "تم ارسال الدعوة";
+"Car Added Successfully" = "تم اضافة السيارة بنجاح";
+"About Us" = "من نحن";
