--- a/Trip/SupportingFiles/en.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/en.lproj/Localizable.strings
@@ -23,3 +23,18 @@
 "Extra Kilometers Price" = "Extra Kilometers Price";
 "please try again" = "please try again";
 "Failed" = "Failed";
+"Success" = "Success";
+"Error" = "Error";
+"Please Upload Licence Image" = "Please Upload Licence Image";
+"Passwords Don't Match" = "Passwords Don't Match";
+"All Fields Are Required" = "All Fields Are Required";
+"Image Uploaded Successfully" =  "Image Uploaded Successfully";
+"Please Try Again" = "Please Try Again";
+"Wrong Email or Password" = "Wrong Email or Password";
+"Enter Your Email And Password" = "Enter Your Email And Password";
+"Password Changed Successfully" = "Password Changed Successfully";
+"This Email Doesn't Exist" = "This Email Doesn't Exist";
+"Please Enter Valid Email" = "Please Enter Valid Email";
+"Invitation Will Be Sent" = "Invitation Will Be Sent";
+"Car Added Successfully" = "Car Added Successfully";
+"About Us" = "About Us";
