--- a/Trip/SupportingFiles/ar.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/ar.lproj/Localizable.strings
@@ -38,3 +38,4 @@
 "Invitation Will Be Sent" = "تم ارسال الدعوة";
 "Car Added Successfully" = "تم اضافة السيارة بنجاح";
 "About Us" = "من نحن";
+"Enter the number of kilometers" = "ادخل عدد الكيلومترات";
