--- a/Trip/SupportingFiles/en.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/en.lproj/Localizable.strings
@@ -38,3 +38,4 @@
 "Invitation Will Be Sent" = "Invitation Will Be Sent";
 "Car Added Successfully" = "Car Added Successfully";
 "About Us" = "About Us";
+"Enter the number of kilometers" = "Enter the number of kilometers";
