--- a/Trip/SupportingFiles/ar.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/ar.lproj/Localizable.strings
@@ -39,3 +39,5 @@
 "Car Added Successfully" = "تم اضافة السيارة بنجاح";
 "About Us" = "من نحن";
 "Enter the number of kilometers" = "ادخل عدد الكيلومترات";
+"Sign In" = "تسجيل الدخول ";
+"Sign Out" = "تسجيل الخروج";
