--- a/Trip/SupportingFiles/en.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/en.lproj/Localizable.strings
@@ -39,3 +39,5 @@
 "Car Added Successfully" = "Car Added Successfully";
 "About Us" = "About Us";
 "Enter the number of kilometers" = "Enter the number of kilometers";
+"Sign In" = "SignIn";
+"Sign Out" = "SignOut";
