--- a/Trip/SupportingFiles/ar.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/ar.lproj/Localizable.strings
@@ -48,3 +48,6 @@
 "Thank You ,request accepted successfully" = "شكرا لك ,تم قبول الطلب بنجاح";
 "Request Refused Successfully" = "تم رفض الطلب بنجاح";
 "OK" = "حسنا";
+"Advanced Search" = "بحث متقدم ";
+"Search" = "بحث";
+"Type message here" = "اكتب الرسالة هنا";
