--- a/Trip/SupportingFiles/en.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/en.lproj/Localizable.strings
@@ -48,3 +48,6 @@
 "hank You ,request accepted successfully" = "hank You ,request accepted successfully";
 "Request Refused Successfully" = "Request Refused Successfully";
 "OK" = "OK";
+"Advanced Search" = "Advanced Search";
+"Search" = "Search";
+"Type message here" = "Type message here";
