--- a/Trip/SupportingFiles/ar.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/ar.lproj/Localizable.strings
@@ -23,7 +23,7 @@
 "Extra Kilometers Price" = "اجمالي  التكلفة الاضافية";
 "please try again" = "حاول مرة اخري";
 "Failed" = "فشل";
-"Success" = "";
+"Success" = "نجاح";
 "Error" = "خطاء";
 "Please Upload Licence Image" = "برجاء اختيار صورة الرخصة";
 "Passwords Don't Match" = "كلمة السر غير متطابقة";
