--- a/Trip/SupportingFiles/ar.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/ar.lproj/Localizable.strings
@@ -51,3 +51,4 @@
 "Advanced Search" = "بحث متقدم ";
 "Search" = "بحث";
 "Type message here" = "اكتب الرسالة هنا";
+"Enter the city name correctly" = "ادخل اسم المدينه بشكل صحيح ";
