--- a/Trip/SupportingFiles/en.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/en.lproj/Localizable.strings
@@ -51,3 +51,4 @@
 "Advanced Search" = "Advanced Search";
 "Search" = "Search";
 "Type message here" = "Type message here";
+"Enter the city name correctly" = "Enter the city name correctly";
