--- a/Trip/SupportingFiles/ar.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/ar.lproj/Localizable.strings
@@ -52,3 +52,4 @@
 "Search" = "بحث";
 "Type message here" = "اكتب الرسالة هنا";
 "Enter the city name correctly" = "ادخل اسم المدينه بشكل صحيح ";
+"Booked successfully" = "تم الحجز بنجاح ";
