--- a/Trip/SupportingFiles/en.lproj/Localizable.strings
+++ b/Trip/SupportingFiles/en.lproj/Localizable.strings
@@ -52,3 +52,4 @@
 "Search" = "Search";
 "Type message here" = "Type message here";
 "Enter the city name correctly" = "Enter the city name correctly";
+"Booked successfully" = "Booked successfully";
